# social-tasks

./: Cargo.toml
.github/workflows/: main.yml
src/: config.rs  main.rs  tests.rs
